feat: live camera capture, Gemini Vision AI Doctor, full review report modal, Firebase Cloud Storage integration, and updated architecture README